; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_tosa.c_tosa_restart.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_tosa.c_tosa_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSC0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8, i8*)* @tosa_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tosa_restart(i8 signext %0, i8* %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca i8*, align 8
  store i8 %0, i8* %3, align 1
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @MSC0, align 4
  %6 = and i32 %5, -65536
  %7 = icmp eq i32 %6, 2146435072
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i32, i32* @MSC0, align 4
  %10 = and i32 %9, 65535
  %11 = or i32 %10, 2128609280
  store i32 %11, i32* @MSC0, align 4
  br label %12

12:                                               ; preds = %8, %2
  %13 = call i32 (...) @tosa_poweroff()
  ret void
}

declare dso_local i32 @tosa_poweroff(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
